# Lidar

./: .gitignore  README.md
documentation/: navigation_stack.md  rosberrypi.md  récap.md  serial.md  setup.md
projet_libasserv.X/: .gitignore  Cmd_For_Move.c  Cmd_For_Move.h  Cmd_From_Communication.c  Cmd_From_Communication.h  Evitement.c  Evitement.h  Gestion_IO_AU_Config.c  Gestion_IO_AU_Config.h  Interpreteur.c  Pragma_Config.c  Sick_VBat.c  Sick_VBat.h  Timers.c  Timers.h  UART_Cmd.c  UART_Cmd.h  interrupts.c  main.c  main.h  motor.c  motor.h  ultrason.c  ultrason.h  user.c  user.h
projet_libasserv.X/lib_asserv/: README  lib_asserv.h  libasserv.h
projet_libasserv.X/lib_asserv/private/: asserv.c  asserv.h  debug.c  debug.h  extern_globals_asserv.h  motion.c  motion.h  odo.c  odo.h  pid.c  pid.h  tools.c  tools.h
projet_libasserv.X/nbproject/: configurations.xml  project.xml
ros/comm/src/: comm.cpp  testComm.cpp
ros/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros/devel/include/comm/: Comm.h  CommRequest.h  CommResponse.h
ros/devel/include/sick_tim/: SickTimConfig.h
ros/devel/lib/comm/: comm  testComm
ros/devel/lib/odo/: odo  serial_test
ros/devel/lib/pkgconfig/: comm.pc  odo.pc  robot_2dnav.pc  setup_lidar.pc  sick_tim.pc
ros/devel/lib/python2.7/dist-packages/comm/srv/: _Comm.py
ros/devel/lib/setup_lidar/: pointcloud_publisher  tf_broadcaster
ros/devel/lib/sick_tim/: sick_tim551_2050001
ros/devel/share/comm/cmake/: comm-msg-extras.cmake  commConfig.cmake
ros/devel/share/common-lisp/ros/comm/srv/: _package_Comm.lisp
ros/devel/share/gennodejs/ros/comm/srv/: Comm.js  _index.js
ros/devel/share/odo/cmake/: odoConfig.cmake
ros/devel/share/robot_2dnav/cmake/: robot_2dnavConfig.cmake
ros/devel/share/roseus/ros/comm/: manifest.l
ros/devel/share/roseus/ros/comm/srv/: Comm.l
ros/devel/share/setup_lidar/cmake/: setup_lidarConfig.cmake
ros/devel/share/sick_tim/cmake/: sick_timConfig.cmake
ros/install/: .rosinstall  _setup_util.py  setup.sh
ros/install/include/comm/: CommRequest.h  CommResponse.h
ros/install/lib/pkgconfig/: comm.pc  odo.pc  robot_2dnav.pc  setup_lidar.pc  sick_tim.pc
ros/install/lib/sick_tim/: sick_tim551_2050001
ros/install/share/comm/cmake/: comm-msg-extras.cmake  commConfig.cmake
ros/install/share/comm/srv/: Comm.srv
ros/install/share/odo/: package.xml
ros/install/share/odo/cmake/: odoConfig.cmake
ros/install/share/robot_2dnav/: package.xml
ros/install/share/robot_2dnav/cmake/: robot_2dnavConfig.cmake
ros/install/share/setup_lidar/cmake/: setup_lidarConfig.cmake
ros/install/share/sick_tim/cmake/: sick_timConfig.cmake
ros/lidar_utils/: CMakeLists.txt  package.xml
ros/lidar_utils/src/: detect_obstacle.cpp  dev.cpp
ros/odo/src/: odo.cpp
ros/sick_tim/: CMakeLists.txt
ros/src/comm/: CMakeLists.txt  package.xml
ros/src/comm/src/: comm.cpp  testComm.cpp
ros/src/odo/: CMakeLists.txt
ros/src/odo/src/: odo.cpp
ros/src/robot_2dnav/: CMakeLists.txt
ros/src/robot_2dnav/launch/: robot_configuration.launch
ros/src/script_match/: CMakeLists.txt  package.xml
ros/src/script_match/launch/: lauch_all_grobot.launch  setup.launch
ros/src/script_match/src/: main.cpp  main_gr.cpp  main_pr.cpp
ros/src/scripts_couleurs/detect_couleur_serveur/src/: detect_couleur.py
ros/src/scripts_couleurs/scripts_utilitaires_qui_servent_de_doc/: README.txt  detecteur_de_couleur.py
ros/src/setup_lidar/: CMakeLists.txt  package.xml
ros/src/setup_lidar/src/: detect_obstacle.cpp  pointcloud_publisher.cpp  tf_broadcaster.cpp
ros/src/sick_tim/: CMakeLists.txt
ros/src/sick_tim/launch/: sick_tim551_2050001.launch
(+5 files in other folders)
